<resources>
    <string name="app_name">HQX7</string>
    <string name="label_search">&#xe619;</string>
    <string name="label_set">&#xe63b;</string>
    <string name="label_down">&#xe613;</string>
    <string name="范围查找">范围查找</string>
    <string name="关键字查找">关键字查找</string>
    <string name="确认">确认</string>
    <string name="取消">取消</string>
    <string name="省份">省份</string>
    <string name="城市">城市</string>
    <string name="输入关键字">输入关键字</string>
    <string-array name="study_sub_arr">
        <item>答题</item>
        <item>书籍</item>
        <item>电视剧</item>
        <item>电影</item>
    </string-array>
    <string name="rg_school">&#xe69b;</string>
    <string name="rg_study">&#xe851;</string>
    <string name="rg_new">&#xe614;</string>
    <string name="rg_base">&#xe618;</string>
    <string name="rg_my">&#xe60b;</string>
    <string name="校园">校园</string>
    <string name="学习">学习</string>
    <string name="首页">首页</string>
    <string name="基地">基地</string>
    <string name="我的">我的</string>
    <string name="红色基地">红色基地</string>
    <string name="答题">答题</string>
    <string name="书籍">书籍</string>
    <string name="电视">电视</string>
    <string name="电影">电影</string>
    <string name="综艺">综艺</string>
    <string name="纪录片">纪录片</string>
    <string name="歌舞剧">歌舞剧</string>
    <string name="rg_back">&#xe616;</string>
    <string name="rg_front">&#xe60d;</string>
    <string name="rg_error">&#xe615;</string>
    <string name="rg_collect">&#xe611;</string>
    <string name="rg_refresh">&#xe61b;</string>
    <string name="rg_more">&#xe60e;</string>
    <string name="rg_edit">&#xe610;</string>
    <string name="分类">分类:</string>
    <string name="毛概">毛概</string>
    <string name="马原">马原</string>
    <string name="近代史">近代史</string>
    <string name="思修">思修</string>
    <string name="时政">时政</string>
    <string-array name="province_arr">
        <item>全部</item>
        <item>北京市</item>
        <item>天津市</item>
        <item>上海市</item>
        <item>重庆市</item>
        <item>河北省</item>
        <item>山西省</item>
        <item>辽宁省</item>
        <item>吉林省</item>
        <item>黑龙江省</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>安徽省</item>
        <item>福建省</item>
        <item>江西省</item>
        <item>山东省</item>
        <item>河南省</item>
        <item>湖北省</item>
        <item>湖南省</item>
        <item>广东省</item>
        <item>海南省</item>
        <item>四川省</item>
        <item>贵州省</item>
        <item>云南省</item>
        <item>陕西省</item>
        <item>甘肃省</item>
        <item>青海省</item>
        <item>台湾省</item>
        <item>内蒙古自治区</item>
        <item>广西壮族自治区</item>
        <item>西藏自治区</item>
        <item>宁夏回族自治区</item>
        <item>新疆维吾尔自治区</item>
        <item>香港特别行政区</item>
        <item>澳门特别行政区</item>
    </string-array>
    <string-array name="北京市_arr">
        <item>北京市</item>
    </string-array>
    <string-array name="天津市_arr">
        <item>天津市</item>
    </string-array>
    <string-array name="上海市_arr">
        <item>上海市</item>
    </string-array>
    <string-array name="重庆市_arr">
        <item>重庆市</item>
    </string-array>
    <string-array name="河北省_arr">
        <item>全部</item>
        <item>石家庄</item>
        <item>唐山</item>
        <item>邯郸</item>
        <item>秦皇岛</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>廊坊</item>
        <item>沧州</item>
        <item>衡水</item>
        <item>邢台</item>
    </string-array>
    <string-array name="山西省_arr">
        <item>全部</item>
        <item>太原</item>
        <item>大同</item>
        <item>忻州</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="辽宁省_arr">
        <item>全部</item>
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="吉林省_arr">
        <item>全部</item>
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
    </string-array>
    <string-array name="黑龙江省_arr">
        <item>全部</item>
        <item>哈尔滨</item>
        <item>大庆</item>
        <item>齐齐哈尔</item>
        <item>佳木斯</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>牡丹江</item>
        <item>伊春</item>
        <item>七台河</item>
        <item>黑河</item>
        <item>绥化</item>
    </string-array>
    <string-array name="江苏省_arr">
        <item>全部</item>
        <item>南京</item>
        <item>镇江</item>
        <item>常州</item>
        <item>无锡</item>
        <item>苏州</item>
        <item>徐州</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>泰州</item>
        <item>南通</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="浙江省_arr">
        <item>全部</item>
        <item>杭州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>宁波</item>
        <item>金华</item>
        <item>温州</item>
        <item>丽水</item>
        <item>绍兴</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
    </string-array>
    <string-array name="安徽省_arr">
        <item>全部</item>
        <item>合肥</item>
        <item>蚌埠</item>
        <item>芜湖</item>
        <item>淮南</item>
        <item>亳州</item>
        <item>阜阳</item>
        <item>淮北</item>
        <item>宿州</item>
        <item>滁州</item>
        <item>安庆</item>
        <item>巢湖</item>
        <item>马鞍山</item>
        <item>宣城</item>
        <item>黄山</item>
        <item>池州</item>
        <item>铜陵</item>
    </string-array>
    <string-array name="福建省_arr">
        <item>全部</item>
        <item>福州</item>
        <item>厦门</item>
        <item>泉州</item>
        <item>三明</item>
        <item>南平</item>
        <item>漳州</item>
        <item>莆田</item>
        <item>宁德</item>
        <item>龙岩</item>
    </string-array>
    <string-array name="江西省_arr">
        <item>全部</item>
        <item>南昌</item>
        <item>九江</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>鹰潭</item>
        <item>上饶</item>
        <item>萍乡</item>
        <item>景德镇</item>
        <item>新余</item>
        <item>宜春</item>
        <item>抚州</item>
    </string-array>
    <string-array name="山东省_arr">
        <item>全部</item>
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>菏泽</item>
        <item>滨州</item>
    </string-array>
    <string-array name="河南省_arr">
        <item>全部</item>
        <item>郑州</item>
        <item>洛阳</item>
        <item>开封</item>
        <item>漯河</item>
        <item>安阳</item>
        <item>新乡</item>
        <item>周口</item>
        <item>三门峡</item>
        <item>焦作</item>
        <item>平顶山</item>
        <item>信阳</item>
        <item>南阳</item>
        <item>鹤壁</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>商丘</item>
        <item>驻马店</item>
    </string-array>
    <string-array name="湖北省_arr">
        <item>全部</item>
        <item>武汉</item>
        <item>襄樊</item>
        <item>宜昌</item>
        <item>黄石</item>
        <item>鄂州</item>
        <item>随州</item>
        <item>荆州</item>
        <item>荆门</item>
        <item>十堰</item>
        <item>孝感</item>
        <item>黄冈</item>
        <item>咸宁</item>
    </string-array>
    <string-array name="湖南省_arr">
        <item>全部</item>
        <item>长沙</item>
        <item>株洲</item>
        <item>湘潭</item>
        <item>衡阳</item>
        <item>岳阳</item>
        <item>郴州</item>
        <item>永州</item>
        <item>邵阳</item>
        <item>怀化</item>
        <item>常德</item>
        <item>益阳</item>
        <item>张家界</item>
        <item>娄底</item>
    </string-array>
    <string-array name="广东省_arr">
        <item>全部</item>
        <item>广州</item>
        <item>深圳</item>
        <item>汕头</item>
        <item>惠州</item>
        <item>珠海</item>
        <item>揭阳</item>
        <item>佛山</item>
        <item>河源</item>
        <item>阳江</item>
        <item>茂名</item>
        <item>湛江</item>
        <item>梅州</item>
        <item>肇庆</item>
        <item>韶关</item>
        <item>潮州</item>
        <item>东莞</item>
        <item>中山</item>
        <item>清远</item>
        <item>江门</item>
        <item>汕尾</item>
        <item>云浮</item>
    </string-array>
    <string-array name="海南省_arr">
        <item>全部</item>
        <item>海口</item>
        <item>三亚</item>
    </string-array>
    <string-array name="四川省_arr">
        <item>全部</item>
        <item>成都</item>
        <item>绵阳</item>
        <item>德阳</item>
        <item>广元</item>
        <item>自贡</item>
        <item>攀枝花</item>
        <item>乐山</item>
        <item>南充</item>
        <item>内江</item>
        <item>遂宁</item>
        <item>广安</item>
        <item>泸州</item>
        <item>达州</item>
        <item>眉山</item>
        <item>宜宾</item>
        <item>雅安</item>
        <item>资阳</item>
    </string-array>
    <string-array name="贵州省_arr">
        <item>全部</item>
        <item>贵阳</item>
        <item>六盘水</item>
        <item>遵义</item>
        <item>安顺</item>
    </string-array>
    <string-array name="云南省_arr">
        <item>全部</item>
        <item>昆明</item>
        <item>曲靖</item>
        <item>玉溪</item>
        <item>保山</item>
        <item>昭通</item>
        <item>丽江</item>
        <item>普洱</item>
        <item>临沧</item>
    </string-array>
    <string-array name="陕西省_arr">
        <item>全部</item>
        <item>西安</item>
        <item>咸阳</item>
        <item>铜川</item>
        <item>延安</item>
        <item>宝鸡</item>
        <item>渭南</item>
        <item>汉中</item>
        <item>安康</item>
        <item>商洛</item>
        <item>榆林</item>
    </string-array>
    <string-array name="甘肃省_arr">
        <item>全部</item>
        <item>兰州</item>
        <item>天水</item>
        <item>平凉</item>
        <item>酒泉</item>
        <item>嘉峪关</item>
        <item>金昌</item>
        <item>白银</item>
        <item>武威</item>
        <item>张掖</item>
        <item>庆阳</item>
        <item>定西</item>
        <item>陇南</item>
    </string-array>
    <string-array name="青海省_arr">
        <item>全部</item>
        <item>西宁</item>
    </string-array>
    <string-array name="台湾省_arr">
        <item>全部</item>
        <item>台北</item>
        <item>台中</item>
        <item>基隆</item>
        <item>高雄</item>
        <item>台南</item>
        <item>新竹</item>
        <item>嘉义</item>
    </string-array>
    <string-array name="内蒙古自治区_arr">
        <item>全部</item>
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
    </string-array>
    <string-array name="广西壮族自治区_arr">
        <item>全部</item>
        <item>南宁</item>
        <item>柳州</item>
        <item>桂林</item>
        <item>梧州</item>
        <item>北海</item>
        <item>崇左</item>
        <item>来宾</item>
        <item>贺州</item>
        <item>玉林</item>
        <item>百色</item>
        <item>河池</item>
        <item>钦州</item>
        <item>防城港</item>
        <item>贵港</item>
    </string-array>
    <string-array name="西藏自治区_arr">
        <item>全部</item>
        <item>拉萨</item>
    </string-array>
</resources>