<?xml version="1.0" encoding="UTF-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/ivory">
        <com.zty.hqx7.view.IconView android:id="@+id/base_back"
                                    style="@style/sub_title_icon"
                                    android:textSize="25sp"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginStart="10dp"
                                    android:text="@string/rg_back"/>
        <com.zty.hqx7.view.IconView android:id="@+id/base_collect"
                                    style="@style/sub_title_icon"
                                    android:layout_marginStart="10dp"
                                    android:textSize="27sp"
                                    android:layout_toStartOf="@+id/base_more"
                                    android:text="@string/rg_collect"/>
        <com.zty.hqx7.view.IconView android:id="@+id/base_more"
                                    style="@style/sub_title_icon"
                                    android:textSize="23sp"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="15dp"
                                    android:text="@string/rg_more"/>
</RelativeLayout>

